<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_difficulty"
        android:title="@string/menu_difficulty"
        app:showAsAction="never">
        <menu>
            <group android:id="@+id/group_difficulty">
                <item
                    android:id="@+id/action_difficulty_easy"
                    android:title="@string/difficulty_easy" />
                <item
                    android:id="@+id/action_difficulty_medium"
                    android:title="@string/difficulty_medium" />
                <item
                    android:id="@+id/action_difficulty_hard"
                    android:title="@string/difficulty_hard" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_local_multiplayer"
        android:title="@string/menu_local_multiplayer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_host_game"
        android:title="@string/menu_host_game"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_join_game"
        android:title="@string/menu_join_game"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset_score"
        android:title="@string/menu_reset_score"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_language"
        android:title="@string/menu_language"
        app:showAsAction="never">
        <menu>
            <group android:id="@+id/group_language">
                <item
                    android:id="@+id/action_language_nb"
                    android:title="@string/lang_norwegian" />
                <item
                    android:id="@+id/action_language_en"
                    android:title="@string/lang_english" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_clear_duplicates"
        android:title="@string/menu_clear_duplicates"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_player_stats"
        android:title="@string/menu_player_stats"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_debug_youtube"
        android:title="Debug: YouTube"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_debug_wifi"
        android:title="Debug: WiFi"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_debug"
        android:title="@string/menu_debug"
        app:showAsAction="never" />

</menu>