<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    android:paddingStart="@dimen/content_horizontal_padding"
    android:paddingTop="@dimen/content_vertical_padding"
    android:paddingEnd="@dimen/content_horizontal_padding"
    android:paddingBottom="@dimen/content_vertical_padding">

    <TextView
        android:id="@+id/textViewSetupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplayer_setup_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/amber_accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAddPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_vertical_padding"
        android:minHeight="48dp"
        android:text="@string/add_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSetupTitle" />

    <TextView
        android:id="@+id/textViewPlayersLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/players_label"
        android:textSize="14sp"
        android:textColor="@color/muted_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddPlayer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPlayerList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:overScrollMode="never"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayersLabel"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartGame"
        tools:listitem="@layout/item_player_row" />

    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/content_vertical_padding"
        android:text="@string/start_game"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="@dimen/game_content_max_width"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>